--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/runtime": "^7.15.3",
     "@hookform/resolvers": "^2.7.1",
+    "add": "^2.0.6",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
