--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
     "react-spinners": "^0.11.0",
+    "react-textarea-autosize": "^8.3.3",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.36.0",
     "yup": "^0.32.9"
