--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.15.3",
     "@hookform/resolvers": "^2.7.1",
     "add": "^2.0.6",
+    "aos": "^2.3.4",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
