--- a/.env
+++ b/.env
@@ -1,12 +1,7 @@
-API_HOME="http://localhost:1337/homepage"
-API_ABOUT="http://localhost:1337/about"
-API_REHABILITATION="http://localhost:1337/categories?id=7"
-API_SERVICES="http://localhost:1337/categories"
-API_PIPE_FITTING="http://localhost:1337/categories?id=9"
-API_OVEN_MOUNTING="http://localhost:1337/categories?id=8"
-API_STEEL_PIPES="http://localhost:1337/categories?id=10"
-API_FOOTER="http://localhost:1337/footer"
-AUTH_KEY="http://localhost:1337/auth/local"
-
-
-BASE_URL="http://localhost:1337"
+NEXT_PUBLIC_API_HOME = https://pe-2.herokuapp.com/homepage
+NEXT_PUBLIC_API_ABOUT= https://pe-2.herokuapp.com/about
+NEXT_PUBLIC_API_SERVICES = https://pe-2.herokuapp.com/services
+NEXT_PUBLIC_API_GALLERY = https://pe-2.herokuapp.com/galleries
+NEXT_PUBLIC_API_MESSAGES = https://pe-2.herokuapp.com/messages
+NEXT_PUBLIC_AUTH_KEY = https://pe-2.herokuapp.com/auth/local 
+NEXT_PUBLIC_BASE_URL = https://pe-2.herokuapp.com/
