--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_API_HOME = https://pe-2.herokuapp.com/homepage
-NEXT_PUBLIC_API_ABOUT= https://pe-2.herokuapp.com/about
-NEXT_PUBLIC_API_SERVICES = https://pe-2.herokuapp.com/services
-NEXT_PUBLIC_API_GALLERY = https://pe-2.herokuapp.com/galleries
-NEXT_PUBLIC_API_MESSAGES = https://pe-2.herokuapp.com/messages
-NEXT_PUBLIC_AUTH_KEY = https://pe-2.herokuapp.com/auth/local 
-NEXT_PUBLIC_BASE_URL = https://pe-2.herokuapp.com/
+NEXT_PUBLIC_API_HOME = https://warm-caverns-96700.herokuapp.com/home
+NEXT_PUBLIC_API_ABOUT= https://warm-caverns-96700.herokuapp.com/about
+NEXT_PUBLIC_API_SERVICES = https://warm-caverns-96700.herokuapp.com/services
+NEXT_PUBLIC_API_GALLERY = https://warm-caverns-96700.herokuapp.com/galleries
+NEXT_PUBLIC_API_MESSAGES = https://warm-caverns-96700.herokuapp.com/messages
+NEXT_PUBLIC_AUTH_KEY = https://warm-caverns-96700.herokuapp.com/auth/local
+NEXT_PUBLIC_BASE_URL = http://localhost:1337/
