--- a/.env
+++ b/.env
@@ -2,6 +2,12 @@ NEXT_PUBLIC_API_HOME = https://warm-caverns-96700.herokuapp.com/home
 NEXT_PUBLIC_API_ABOUT= https://warm-caverns-96700.herokuapp.com/about
 NEXT_PUBLIC_API_SERVICES = https://warm-caverns-96700.herokuapp.com/services
 NEXT_PUBLIC_API_GALLERY = https://warm-caverns-96700.herokuapp.com/galleries
-NEXT_PUBLIC_API_MESSAGES = https://warm-caverns-96700.herokuapp.com/messages
 NEXT_PUBLIC_AUTH_KEY = https://warm-caverns-96700.herokuapp.com/auth/local
-NEXT_PUBLIC_BASE_URL = http://localhost:1337/
+NEXT_PUBLIC_API_TESTIMONIALS = https://warm-caverns-96700.herokuapp.com/testimonials
+NEXT_PUBLIC_API_ILDSTEDER = https://warm-caverns-96700.herokuapp.com/ildsteders
+NEXT_PUBLIC_API_ILD_OVN = https://warm-caverns-96700.herokuapp.com/ildsteder-og-montering
+NEXT_PUBLIC_API_TAK_PIPE = https://warm-caverns-96700.herokuapp.com/taksikring-og-pipebeslag
+NEXT_PUBLIC_API_STALPIPE = https://warm-caverns-96700.herokuapp.com/stalpipe
+NEXT_PUBLIC_API_REHAB = https://warm-caverns-96700.herokuapp.com/rehabilitering
+
+NEXT_PUBLIC_API_MESSAGES = https://warm-caverns-96700.herokuapp.com/messages
