--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
     "react-spinners": "^0.11.0",
     "react-textarea-autosize": "^8.3.3",
