--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-textarea-autosize": "^8.3.3",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.36.0",
+    "typescript": "^4.7.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
