--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ NEXT_PUBLIC_API_STALPIPE = https://warm-caverns-96700.herokuapp.com/stalpipe
 NEXT_PUBLIC_API_REHAB = https://warm-caverns-96700.herokuapp.com/rehabilitering
 
 NEXT_PUBLIC_API_MESSAGES = https://warm-caverns-96700.herokuapp.com/messages
+
+NEXT_PUBLIC_SERVICE_ID = 'service_tqkqmk4'
+NEXT_PUBLIC_TEMPLATE_ID = 'template_p79dm3l'
+NEXT_PUBLIC_PUBLIC_KEY = 'aQnjCHLb0XF_LwwqR'
